fix author img alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -133,15 +133,11 @@ $post-list-cover-photo-margin: 0 0 0 0;
   height: $post-author-thumbnail-size;
   margin-right: 5px;
   width: $post-author-thumbnail-size;
+  vertical-align: top;
 
   @include media-query($on-palm) {
   
   }
-}
-
-.post-author-thumbnail-container {
-  vertical-align: top;
-  display: inline-block;
 }
 
 .post-author-thumbnail-large {
@@ -155,7 +151,7 @@ $post-list-cover-photo-margin: 0 0 0 0;
 }
 
 .post-title {
-  font-size: 42px;
+  font-size: $giant-font-size;
   font-weight: $font-weight-bold;
   line-height: 1.2;
 
