--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ $base-font-family: 'Sanomat Sans', Helvetica, Arial, sans-serif;
 $base-font-family-serif: 'Droid Serif', serif;
 
 // Font size
-$base-font-size:   18px;
+$base-font-size:   20px;
 $giant-font-size: $base-font-size * 2;
 $large-font-size: $base-font-size * 1.25;
 $small-font-size:  $base-font-size * 0.875;
